Fixed layout issues of header.

--- a/portfolio/src/components/components.css
+++ b/portfolio/src/components/components.css
@@ -1,9 +1,15 @@
 .display-pic-container {
-    margin-left: 5vw;
+    height: 200px;
+    width: 200px;
 }
 
 .contact-container {
-    margin-right: 5vw;
+    height: 200px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
 }
 
 .display-pic {
@@ -16,6 +22,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: stretch;
+    justify-content: center;
 }
 
 .name-container {
